--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     },
     "require": {
         "william-costa/dot-env": "^0.1.0",
-        "william-costa/database-manager": "^0.1.0"
+        "william-costa/database-manager": "^0.1.0",
+        "samayo/bulletproof": "4.0.*"
     }
 }
